--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aspirant Arena</title>
+    <link rel="icon" type="image/png" href="src/utils/icons/3.png">
   </head>
   <body>
     <div id="root"> render is not working</div>
